--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ DENIS_J0255/Gibbs_kernel.ipynb
 DENIS_J0255/nod_pair_comparison.ipynb
 DENIS_J0255/retrieval_comparison.ipynb
 DENIS_J0255/retrieval_comparison.py
+Luhman_16/figures/d_spec_K_A
+Luhman_16/figures/d_spec_K_B
+Luhman_16/figures/plots_Exo_5
