--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ DENIS_J0255/retrieval_comparison.py
 Luhman_16/figures/d_spec_K_A
 Luhman_16/figures/d_spec_K_B
 Luhman_16/figures/plots_Exo_5
+Luhman_16/figures/PT_profiles
